linkerd-cel/require-linkerd-mesh-injection/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-linkerd-mesh-injection
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-linkerd-mesh-injection.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-linkerd-mesh-injection
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: good-ns.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-ns.yaml
